--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Noah Kiser Homepage
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hi there, I'm Noah Kiser</h1>
+	<p>I'm a Computer and Electrical Enginner, with a B.S. from NC State University.</p>
+	<p>I am a <a href="/projects">maker</a>, a <a href="/projects">programmer</a>, and a <a href="/projects">designer</a>. Check out some of my <a href="/projects">projects</a></p>
+	<p><a href="/about">Read more about me...</a></p>
 </div><!-- /.blurb -->
