--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@ title: Noah Kiser Homepage
 	<h1>Hi there, I'm Noah Kiser</h1>
 	<p>I'm a Computer and Electrical Enginner, with a B.S. from NC State University.</p>
 	<p>I am a <a href="/projects">maker</a>, a <a href="/projects">programmer</a>, and a <a href="/projects">designer</a>. Check out some of my <a href="/projects">projects</a></p>
-	<p><a href="/about">Read more about me...</a></p>
+	<p><a href="/about">Read more about me</a>, or <a href="/resume">take a look at my resume</a></p>
 </div><!-- /.blurb -->
