--- a/projects/index.html
+++ b/projects/index.html
@@ -5,7 +5,7 @@ title: Noah Kiser Projects
 	<h1>{{ page.title }}</h1>
 	<ul class="posts">
 
-	  {% for project in site.projects %}
-	    <li><a href="{{ project.url }}" title="{{ project.title }}">{{ project.title }}</a></li>
+	  {% for post in site.projects %}
+	    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 	  {% endfor %}
 	</ul>
