--- a/projects/index.html
+++ b/projects/index.html
@@ -5,7 +5,7 @@ title: Noah Kiser Projects
 	<h1>{{ page.title }}</h1>
 	<ul class="posts">
 
-	  {% for post in site.projects %}
+	  {% for post in site.posts %}
 	    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 	  {% endfor %}
 	</ul>
