--- a/resume/index.html
+++ b/resume/index.html
@@ -1,11 +1,8 @@
 ---
 layout: default
-title: Hank Quinlan's Blog
+title: Noah Kiser Resume
 ---
-	<h1>{{ page.title }}</h1>
-	<ul class="posts">
-
-	  {% for post in site.posts %}
-	    <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
-	  {% endfor %}
-	</ul>
+	<h1>Resume</h1>
+	<div  style="width:70vw;height:70vw">
+	<embed src= "/assets/NoahKiserResume.pdf" width="100%", height="100%">
+	</div>
