--- a/resume/index.html
+++ b/resume/index.html
@@ -2,7 +2,13 @@
 layout: default
 title: Noah Kiser Resume
 ---
-	<h1>Resume</h1>
+	<h1 style="display:inline">Resume</h1>
+	<div class="blurb" style="display:inline">
+	<p style="display:inline">
+	<a href="https://drive.google.com/file/d/1qSjuPLNaNFp7tqit2Zwu6bnRvs-ia1Gy/view?usp=sharing">&emsp;Download from Google Drive</a>
+	<a href="/assets/NoahKiserResume.pdf">&emsp;Download from GitHub</a>
+	</p>
+	</div>
 	<div  style="width:70vw;height:70vw">
-	<embed src= "/assets/NoahKiserResume.pdf" width="100%", height="100%">
+	<iframe src="https://drive.google.com/file/d/1qSjuPLNaNFp7tqit2Zwu6bnRvs-ia1Gy/preview" width="100%" height="100%"></iframe>
 	</div>
