--- a/resume/index.html
+++ b/resume/index.html
@@ -9,6 +9,6 @@ title: Noah Kiser Resume
 	<a href="/assets/NoahKiserResume.pdf">&emsp;Download from GitHub</a>
 	</p>
 	</div>
-	<div  style="width:70vw;height:70vw">
+	<div  style="width:65vw;height:85vw;margin: 0 auto;">
 	<iframe src="https://drive.google.com/file/d/1qSjuPLNaNFp7tqit2Zwu6bnRvs-ia1Gy/preview" width="100%" height="100%"></iframe>
 	</div>
