--- a/projects/index.html
+++ b/projects/index.html
@@ -4,8 +4,15 @@ title: Noah Kiser Projects
 ---
 	<h1>{{ page.title }}</h1>
 	<ul class="posts">
-
+	
 	  {% for post in site.posts %}
-	    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+		{% if post.project %}
+	    <li>
+			{% if post.thumbnail %}
+			<img src="/assets/{{ post.project }}/{{ post.thumbnail }}" alt="{{ post.project }}: {{ post.thumbnail }}" style="height:1.5em;">
+			{% endif %}
+			<a href="{{ post.url }}" title="{{ post.title }}">{{post.project}}: {{ post.title }}</a>
+		</li>
+		{% endif %}
 	  {% endfor %}
 	</ul>
