--- a/resume/index.html
+++ b/resume/index.html
@@ -2,13 +2,15 @@
 layout: default
 title: Noah Kiser Resume
 ---
-	<h1 style="display:inline">Resume</h1>
+	<h1>Resume</h1>
 	<div class="blurb" style="display:inline">
-	<p style="display:inline">
-	<a href="https://drive.google.com/file/d/1qSjuPLNaNFp7tqit2Zwu6bnRvs-ia1Gy/view?usp=sharing">&emsp;Download from Google Drive</a>
-	<a href="/assets/NoahKiserResume.pdf">&emsp;Download from GitHub</a>
-	</p>
+		<p style=>
+			<ul class="posts">
+				<li><a href="https://drive.google.com/file/d/1qSjuPLNaNFp7tqit2Zwu6bnRvs-ia1Gy/view?usp=sharing">Download from Google Drive</a></li>
+				<li><a href="/assets/NoahKiserResume.pdf">Download from GitHub</a></li>
+			</ul>
+		</p>
 	</div>
 	<div  style="width:65vw;height:85vw;margin: 0 auto;">
-	<iframe src="https://drive.google.com/file/d/1qSjuPLNaNFp7tqit2Zwu6bnRvs-ia1Gy/preview" width="100%" height="100%"></iframe>
+		<iframe src="https://drive.google.com/file/d/1qSjuPLNaNFp7tqit2Zwu6bnRvs-ia1Gy/preview" width="100%" height="100%"></iframe>
 	</div>
