--- a/projects/index.html
+++ b/projects/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Noah Kiser Projects
 ---
-	<h1>{{ page.title }}</h1>
+	<h1>List of Projects:</h1>
 	<ul class="posts">
 	
 	  {% for post in site.posts %}
