header font size increase, resume padding

--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@ title: Noah Kiser Homepage
 	<p>I am a Silicon Engineering Intern with Microsoft in Morrisville, NC.</p>
 	<p>I am a Computer and Electrical Enginner, with a B.S. from NC State University.</p>
 	<p>I am a <a href="/projects">maker</a>, a <a href="/projects">programmer</a>, and a <a href="/projects">designer</a>. Check out some of my <a href="/projects">projects.</a></p>
-	<p><a href="/about">Read more about me</a>, <a href="https://www.linkedin.com/in/noah-kiser-31432712b/">view my LinkedIn profile</a>, or <a href="/resume">take a look at my resume</a></p>
+	<p><a href="/contact">Contact me</a>, <a href="https://www.linkedin.com/in/noah-kiser-31432712b/">view my LinkedIn profile</a>, or <a href="/resume">take a look at my resume</a></p>
 </div><!-- /.blurb -->
