--- a/resume/index.html
+++ b/resume/index.html
@@ -11,6 +11,6 @@ title: Noah Kiser Resume
 			</ul>
 		</p>
 	</div>
-	<div  style="width:65vw;height:85vw;margin: 0 auto;">
+	<div  style="width:65vw;height:85vw;margin: 0 auto;padding-bottom:20px">
 		<iframe src="https://drive.google.com/file/d/1qSjuPLNaNFp7tqit2Zwu6bnRvs-ia1Gy/preview" width="100%" height="100%"></iframe>
 	</div>
