--- a/resume/index.html
+++ b/resume/index.html
@@ -2,13 +2,10 @@
 layout: default
 title: Noah Kiser Resume
 ---
+<div class="blurb">
 	<h1>Resume</h1>
-	<div class="blurb" style="display:inline">
-		<p style=>
-			<ul class="posts">
-				<li><a href="https://drive.google.com/file/d/1qSjuPLNaNFp7tqit2Zwu6bnRvs-ia1Gy/view?usp=sharing">Download from Google Drive</a></li>
-				<li><a href="/assets/NoahKiserResume.pdf">Download from GitHub</a></li>
-			</ul>
+		<p>
+			<a href="/assets/NoahKiserResume.pdf">Download Local Copy</a>
 		</p>
 	</div>
 	<div  style="width:65vw;height:85vw;margin: 0 auto;padding-bottom:20px">
