--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@ title: Noah Kiser Homepage
 	<p>I am a Computer and Electrical Enginner, with a B.S. from NC State University.</p>
 	<p>I am a <a href="/projects">programmer</a>, a <a href="/projects">designer</a>, and a <a href="/projects">maker</a>. Check out some of my <a href="/projects">projects.</a></p>
 	<p><a href="/contact">Contact me</a>, <a href="https://www.linkedin.com/in/noah-kiser-31432712b/">view my LinkedIn profile</a>, or <a href="/resume">take a look at my resume</a></p>
-</div><!-- /.blurb -->
+</div>
