added photo to homepage

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 layout: default
 title: Noah Kiser Homepage
 ---
-<div class="blurb">
-	<h1>Hi there, I'm Noah Kiser</h1>
-	<p>I am a Silicon Engineering Intern with Microsoft in Morrisville, NC.</p>
-	<p>I am a Computer and Electrical Enginner, with a B.S. from NC State University.</p>
-	<p>I am a <a href="/projects">programmer</a>, a <a href="/projects">designer</a>, and a <a href="/projects">maker</a>. Check out some of my <a href="/projects">projects.</a></p>
-	<p><a href="/contact">Contact me</a>, <a href="https://www.linkedin.com/in/noah-kiser-31432712b/">view my LinkedIn profile</a>, or <a href="/resume">take a look at my resume</a></p>
+<div style="float:right;margin:10px;max-width:4in;">
+    <img src="assets/ResumePic.jpg" width="100%"/>
+</div>
+<div class="blurb" style="min-height:5.5in;">
+    <h1><span style="display:inline-block;">Hi there, I'm</span> <span style="display:inline-block;">Noah Kiser</span></h1>
+    <p>I am a Silicon Engineering Intern with Microsoft in Morrisville, NC.</p>
+    <p>I am a Computer and Electrical Enginner, with a B.S. from NC State University.</p>
+    <p>I am a <a href="/projects">programmer</a>, a <a href="/projects">designer</a>, and a <a href="/projects">maker</a>. Check out some of my <a href="/projects">projects.</a></p>
+    <p><a href="/contact">Contact me</a>, <a href="https://www.linkedin.com/in/noah-kiser-31432712b/">view my LinkedIn profile</a>, or <a href="/resume">take a look at my resume</a></p>
 </div>
