--- a/contact/index.html
+++ b/contact/index.html
@@ -6,8 +6,8 @@ title: Noah Kiser Contact
 	<h1>How to reach me!</h1>
 	<ul>
 		<li>Phone: <a href="tel:919-915-2152">919-915-2152</a></li>
-		<li>Email: <a href="mailto:nckiser@ncsu.edu">nckiser@ncsu.edu</a></li>
-		<li>LinkedIn: <a href="https://www.linkedin.com/in/noah-kiser-31432712b/">Profile Link</a></li>
+		<li>Email: <a href="mailto:contact@noahkiser.com">noahkiser.com</a></li>
+		<li>LinkedIn: <a href="https://www.linkedin.com/in/noah-kiser/">Profile Link</a></li>
 	</ul>
 	<p>For mailing address, please email me for details and logistics.</p>
 	<p>I will do my best to be prompt when responding to emails and LinkedIn messages.</p>
