--- a/contact/index.html
+++ b/contact/index.html
@@ -6,7 +6,7 @@ title: Noah Kiser Contact
 	<h1>How to reach me!</h1>
 	<ul>
 		<li>Phone: <a href="tel:919-915-2152">919-915-2152</a></li>
-		<li>Email: <a href="mailto:contact@noahkiser.com">noahkiser.com</a></li>
+		<li>Email: <a href="mailto:contact@noahkiser.com">contact@noahkiser.com</a></li>
 		<li>LinkedIn: <a href="https://www.linkedin.com/in/noah-kiser/">Profile Link</a></li>
 	</ul>
 	<p>For mailing address, please email me for details and logistics.</p>
