--- a/resume/index.html
+++ b/resume/index.html
@@ -5,7 +5,7 @@ title: Noah Kiser Resume
 <div class="posts">
 	<h1>Resume</h1>
 		<p>
-			<a href="/assets/NoahKiserResume.pdf">Download Local Copy</a>
+			<a href="/assets/NoahKiserResumeJul2021.pdf">Download Local Copy</a>
 		</p>
 </div>
 <div  style="width:65vw;height:85vw;margin: 0 auto;padding-bottom:20px">
