--- a/resume/index.html
+++ b/resume/index.html
@@ -9,5 +9,5 @@ title: Noah Kiser Resume
 		</p>
 </div>
 <div  style="width:65vw;height:85vw;margin: 0 auto;padding-bottom:20px">
-    <iframe src="https://drive.google.com/file/d/1f2wgarcnE3ootrhWcEQKCWm84edPQF3t/preview" width="100%" height="100%"></iframe>
+    <iframe src="/assets/NoahKiserResumeJul2021.pdf" width="100%" height="100%"></iframe>
 </div>
