--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Noah Kiser Homepage
     <img src="assets/ResumePic.jpg" width="100%"/>
 </div>
 <div class="blurb" style="min-height:5.5in;">
-    <h1><span style="display:inline-block;">Hi there, I'm</span> <span style="display:inline-block;">Noah Kiser</span></h1>
+    <h1><span style="display:inline-block;">I'm Noah Kiser.</span></h1>
     <p>I am a Silicon Engineering Intern with Microsoft in Morrisville, NC.</p>
     <p>I am a Computer and Electrical Enginner, with a B.S. from NC State University.</p>
     <p>I am a <a href="/projects">programmer</a>, a <a href="/projects">designer</a>, and a <a href="/projects">maker</a>. Check out some of my <a href="/projects">projects.</a></p>
