--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ title: Noah Kiser Homepage
     <img src="assets/ResumePic.jpg" width="100%"/>
 </div>
 <div class="blurb" style="min-height:5.5in;">
-    <h1><span style="display:inline-block;">I'm Noah Kiser.</span></h1>
-    <p>I am a Silicon Engineering Intern with Microsoft in Morrisville, NC.</p>
-    <p>I am a Computer and Electrical Enginner, with a B.S. from NC State University.</p>
-    <p>I am a <a href="/projects">programmer</a>, a <a href="/projects">designer</a>, and a <a href="/projects">maker</a>. Check out some of my <a href="/projects">projects.</a></p>
+    <h1><span style="display:inline-block;">Hello, I'm Noah Kiser.</span></h1>
+    <p>I am an Electical and Computer Engineeer, with a B.S. from NC State University.</p>
+    <p>I am a maker, tinkerer, and creator. Here are  <a href="/projects"></a>some of my projects</a>.</p>
+    <p>I am critical thinking, problem solver, team leader, and innovator.</p>
     <p><a href="/contact">Contact me</a>, <a href="https://www.linkedin.com/in/noah-kiser-31432712b/">view my LinkedIn profile</a>, or <a href="/resume">take a look at my resume</a></p>
 </div>
