Fixed link to project page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Noah Kiser Homepage
 <div class="blurb" style="min-height:5.5in;">
     <h1><span style="display:inline-block;">Hello, I'm Noah Kiser.</span></h1>
     <p>I am an Electical and Computer Engineeer, with a B.S. from NC State University.</p>
-    <p>I am a maker, tinkerer, and creator. Here are  <a href="/projects"></a>some of my projects</a>.</p>
+    <p>I am a maker, tinkerer, and creator. Here are  <a href="/projects">some of my projects</a>.</p>
     <p>I am a critical thinking problem solver, team leader, and innovator.</p>
     <p><a href="/contact">Contact me</a>, <a href="https://www.linkedin.com/in/noah-kiser-31432712b/">view my LinkedIn profile</a>, or <a href="/resume">take a look at my resume</a></p>
 </div>
